# cubepi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: SECRETS.md  ci.yml  docs.yml  publish.yml
.playwright-cli/: page-2026-06-05T01-47-45-236Z.yml  page-2026-06-05T01-50-49-183Z.yml  page-2026-06-05T01-51-50-873Z.yml  page-2026-06-05T01-51-52-260Z.yml  page-2026-06-05T01-51-53-585Z.yml
cubepi/: __init__.py  errors.py  types.py
cubepi/agent/: __init__.py  agent.py  loop.py  tool_decorator.py  tools.py  types.py
cubepi/checkpointer/: __init__.py  base.py  exceptions.py  memory.py  sqlite.py
cubepi/cli/: __init__.py  __main__.py
cubepi/deferred/: __init__.py  _catalog.py  _dispatch_tool.py  _expand_tool.py  middleware.py  types.py
cubepi/hitl/: __init__.py  _trace.py  ask_user.py  binding.py  channel.py  exceptions.py  middleware.py  policy.py  testing.py  types.py
cubepi/mcp/: __init__.py  _adapter.py  _tracing.py  http_loader.py  stdio_loader.py  types.py
dev/: seo-audit-2026-06-05.md
examples/: README.md  _provider.py  ask_user_form.py  checkpointing_mysql.py  checkpointing_postgres.py  multi_provider_failover.py  persistent_chat.py  postgres_fastapi.py  resumable_tasks.py  sandbox_confirm.py  weather_agent.py
tests/: test_capability.py  test_catalog.py  test_errors.py  test_goal.py  test_init.py  test_package.py  test_structured_output.py  test_synthetic_messages.py
website/: docusaurus.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidebars.ts  versions.json
(+490 files in other folders)
