[project]
name = "cubepi"
version = "0.1.0"
description = "Pythonic async-native agent framework"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.100.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
sqlite = [
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["cubepi"]
